use_undefined_identifier/c0/CheckBadFlow
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/CheckBadFlow/src/partner.c:1023:1: error: use of undeclared identifier 'CheckBadFlow_pawnmated'
CheckBadFlow_pawnmated = 0; 
^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/CheckBadFlow/src/partner.c:1024:1: error: use of undeclared identifier 'CheckBadFlow_knightmated'
CheckBadFlow_knightmated = 0; 
^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/CheckBadFlow/src/partner.c:1025:1: error: use of undeclared identifier 'CheckBadFlow_bishopmated'
CheckBadFlow_bishopmated = 0; 
^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/CheckBadFlow/src/partner.c:1026:1: error: use of undeclared identifier 'CheckBadFlow_rookmated'
CheckBadFlow_rookmated = 0; 
^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/CheckBadFlow/src/partner.c:1027:1: error: use of undeclared identifier 'CheckBadFlow_queenmated'
CheckBadFlow_queenmated = 0; 
^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/CheckBadFlow/src/partner.c:1257:19: error: use of undeclared identifier 'CheckBadFlow_pawnmated'
if ( pawnmates != CheckBadFlow_pawnmated ) 
                  ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/CheckBadFlow/src/partner.c:1263:12: error: use of undeclared identifier 'CheckBadFlow_pawnmated'
else if ( !CheckBadFlow_pawnmated ) 
           ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/CheckBadFlow/src/partner.c:1269:21: error: use of undeclared identifier 'CheckBadFlow_knightmated'
if ( knightmates != CheckBadFlow_knightmated ) 
                    ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/CheckBadFlow/src/partner.c:1275:12: error: use of undeclared identifier 'CheckBadFlow_knightmated'
else if ( !CheckBadFlow_knightmated ) 
           ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/CheckBadFlow/src/partner.c:1281:21: error: use of undeclared identifier 'CheckBadFlow_bishopmated'
if ( bishopmates != CheckBadFlow_bishopmated ) 
                    ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/CheckBadFlow/src/partner.c:1287:12: error: use of undeclared identifier 'CheckBadFlow_bishopmated'
else if ( !CheckBadFlow_bishopmated ) 
           ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/CheckBadFlow/src/partner.c:1293:19: error: use of undeclared identifier 'CheckBadFlow_rookmated'
if ( rookmates != CheckBadFlow_rookmated ) 
                  ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/CheckBadFlow/src/partner.c:1299:12: error: use of undeclared identifier 'CheckBadFlow_rookmated'
else if ( !CheckBadFlow_rookmated ) 
           ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/CheckBadFlow/src/partner.c:1305:20: error: use of undeclared identifier 'CheckBadFlow_queenmated'
if ( queenmates != CheckBadFlow_queenmated ) 
                   ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/CheckBadFlow/src/partner.c:1311:12: error: use of undeclared identifier 'CheckBadFlow_queenmated'
else if ( !CheckBadFlow_queenmated ) 
           ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/CheckBadFlow/src/partner.c:1335:1: error: use of undeclared identifier 'CheckBadFlow_pawnmated'
CheckBadFlow_pawnmated = pawnmates; 
^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/CheckBadFlow/src/partner.c:1337:3: error: use of undeclared identifier 'CheckBadFlow_pawnmated'
--CheckBadFlow_pawnmated; 
  ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/CheckBadFlow/src/partner.c:1339:1: error: use of undeclared identifier 'CheckBadFlow_bishopmated'
CheckBadFlow_bishopmated = bishopmates; 
^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/CheckBadFlow/src/partner.c:1341:3: error: use of undeclared identifier 'CheckBadFlow_bishopmated'
--CheckBadFlow_bishopmated; 
  ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/CheckBadFlow/src/partner.c:1343:1: error: use of undeclared identifier 'CheckBadFlow_rookmated'
CheckBadFlow_rookmated = rookmates; 
^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/CheckBadFlow/src/partner.c:1345:3: error: use of undeclared identifier 'CheckBadFlow_rookmated'
--CheckBadFlow_rookmated; 
  ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/CheckBadFlow/src/partner.c:1347:1: error: use of undeclared identifier 'CheckBadFlow_queenmated'
CheckBadFlow_queenmated = queenmates; 
^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/CheckBadFlow/src/partner.c:1349:3: error: use of undeclared identifier 'CheckBadFlow_queenmated'
--CheckBadFlow_queenmated; 
  ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/CheckBadFlow/src/partner.c:1351:1: error: use of undeclared identifier 'CheckBadFlow_knightmated'
CheckBadFlow_knightmated = knightmates; 
^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/CheckBadFlow/src/partner.c:1353:3: error: use of undeclared identifier 'CheckBadFlow_knightmated'
--CheckBadFlow_knightmated; 
  ^
25 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/CheckBadFlow/src/obj/partner.o] Error 1
